updated sandbox paypal payment.html

--- a/extension/_locales/es/messages.json
+++ b/extension/_locales/es/messages.json
@@ -51,7 +51,7 @@
     "message": "Extensión Gato Pixel"
   },
   "priceKRW": {
-    "message": "3,00€"
+    "message": "$2.99"
   },
   "includedPremiumSkins": {
     "message": "Skins Premium Incluidos"
