--- a/extension/_locales/fr/messages.json
+++ b/extension/_locales/fr/messages.json
@@ -51,7 +51,7 @@
     "message": "Extension Chat Pixel"
   },
   "priceKRW": {
-    "message": "3,00€"
+    "message": "$2.99"
   },
   "includedPremiumSkins": {
     "message": "Skins Premium Inclus"
