--- a/extension/_locales/ja/messages.json
+++ b/extension/_locales/ja/messages.json
@@ -51,7 +51,7 @@
     "message": "ピクセル猫拡張機能"
   },
   "priceKRW": {
-    "message": "¥300"
+    "message": "$2.99"
   },
   "includedPremiumSkins": {
     "message": "含まれるプレミアムスキン"
