--- a/extension/_locales/ko/messages.json
+++ b/extension/_locales/ko/messages.json
@@ -51,7 +51,7 @@
     "message": "픽셀 고양이 확장 프로그램"
   },
   "priceKRW": {
-    "message": "₩3,000"
+    "message": "$2.99"
   },
   "includedPremiumSkins": {
     "message": "포함된 프리미엄 스킨"
