--- a/extension/_locales/zh_CN/messages.json
+++ b/extension/_locales/zh_CN/messages.json
@@ -51,7 +51,7 @@
     "message": "像素猫扩展程序"
   },
   "priceKRW": {
-    "message": "¥20"
+    "message": "$2.99"
   },
   "includedPremiumSkins": {
     "message": "包含的高级皮肤"
