--- a/extension/_locales/ja/messages.json
+++ b/extension/_locales/ja/messages.json
@@ -103,5 +103,50 @@
   },
   "autoActivationFailureNote": {
     "message": "自動アクティベーションが失敗した場合は、上記のライセンスキーを拡張機能に直接入力してください。"
+  },
+  "catSkinsSectionTitle": {
+    "message": "猫スキン"
+  },
+  "premiumDogSkinsSectionTitle": {
+    "message": "プレミアム犬スキン"
+  },
+  "premiumModalTitle": {
+    "message": "🌟 プレミアムスキン"
+  },
+  "premiumModalOnlyPremium": {
+    "message": "このスキンはプレミアム版でのみ利用できます。"
+  },
+  "premiumModalLifetimeMessage": {
+    "message": "すべてのプレミアムスキンを生涯使用できます！"
+  },
+  "premiumPayButton": {
+    "message": "💳 支払い"
+  },
+  "enterLicenseButton": {
+    "message": "🔑 ライセンス入力"
+  },
+  "closeButton": {
+    "message": "閉じる"
+  },
+  "premiumActivated": {
+    "message": "🎉 プレミアムスキンが有効になりました！"
+  },
+  "autoLicenseDetected": {
+    "message": "🔄 自動ライセンスを検出しました！"
+  },
+  "enterLicensePrompt": {
+    "message": "ライセンスキーを入力してください："
+  },
+  "chromeLoginAccountLabel": {
+    "message": "Chrome ログインアカウント"
+  },
+  "noChromeLogin": {
+    "message": "Chrome ログインなし"
+  },
+  "originalPrice": {
+    "message": "$2.99"
+  },
+  "discountedPrice": {
+    "message": "$0.99"
   }
 } 
