--- a/extension/_locales/es/messages.json
+++ b/extension/_locales/es/messages.json
@@ -157,5 +157,8 @@
   },
   "discountedPriceValue": {
     "message": "0.99"
+  },
+  "discountBadge": {
+    "message": "🔥 67% DESCUENTO Ahora"
   }
 } 
