--- a/extension/_locales/fr/messages.json
+++ b/extension/_locales/fr/messages.json
@@ -159,6 +159,6 @@
     "message": "0.99"
   },
   "discountBadge": {
-    "message": "🔥 67% REMISE Maintenant"
+    "message": "🔥 67% REMISE"
   }
 } 
