--- a/extension/_locales/es/messages.json
+++ b/extension/_locales/es/messages.json
@@ -159,6 +159,6 @@
     "message": "0.99"
   },
   "discountBadge": {
-    "message": "🔥 67% DESCUENTO"
+    "message": "🔥 Ahora 67% DESCUENTO"
   }
 } 
